# elephant

./: .gitignore  .travis.yml  .zenodo.json  Makefile  README.md  codemeta.json  pyproject.toml  setup.py
.github/workflows/: CI.yml  build_wheels.yml
doc/: conf.py
doc/bib/: elephant.bib
doc/tutorials/: nbeval.sh  parallel.ipynb  spike_power_spectra.ipynb  unitary_event_analysis.ipynb
elephant/: asset.py  asset_example.py  cell_assembly_detection.py  conversion.py  current_source_density.py  kernels.py  neo_tools.py  phase_analysis.py  signal_processing.py  spade.py  spectral.py  spike_train_correlation.py  spike_train_dissimilarity.py  spike_train_generation.py  spike_train_surrogates.py  spike_train_synchrony.py  sta.py  statistics.py  time_warping.py  trials.py  unitary_event_analysis.py
elephant/asset/: asset.py
elephant/buffalo/: decorator.py  graph.py  object_hash.py  serialization.py
elephant/causality/: granger.py
elephant/current_source_density_src/: KCSD.py  basis_functions.py  icsd.py  utility_functions.py
elephant/functional_connectivity_src/: total_spiking_probability_edges.py
elephant/gpfa/: gpfa.py  gpfa_core.py  gpfa_util.py
elephant/objects/: __init__.py  base.py  histogram.py  spectral.py
elephant/parallel/: mpi.py  parallel.py
elephant/spade_src/: fast_fca.py
elephant/test/: test_asset.py  test_causality.py  test_change_point_detection.py  test_cubic.py  test_current_source_density.py  test_gpfa.py  test_icsd.py  (+12 more)
requirements/: environment-docs.yml  environment.yml  requirements-docs.txt  requirements-tutorials.txt
(+71 files in other folders)
