[project]
name = "elephant"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo>=0.10.0",
    "numpy>=1.19.5,<2",
    "quantities>=0.14.1",
    "scipy>=1.10.0",
    "six>=1.10.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "nixio>=1.5.0",
    "pytest>=8.4.2",
]
docs = [
    "jupyter>=1.0.0",
    "matplotlib>=3.3.2,<3.9.0",
    "nbsphinx>=0.8.0",
    "numpydoc>=1.1.0",
    "sphinx>=3.3.0",
    "sphinx-tabs>=1.3.0",
    "sphinxcontrib-bibtex>1.0.0",
]
extras = [
    "jinja2>=2.11.2",
    "scikit-learn>=0.23.2",
    "statsmodels>=0.12.1",
]
opencl = [
    "pyopencl>=2020.2.2",
]
tutorials = [
    "h5py>=3.1.0",
    "matplotlib>=3.3.2,<3.9.0",
    "nixio>=1.5.0",
]
